Adding navbar and socia media icone

--- a/index.html
+++ b/index.html
@@ -1,134 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-            crossorigin="anonymous">
-        <title>Document</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <!-- esto es la barra de navegacion-->
-        <nav class="navbar navbar-expand-lg bg-white">
-            <!-- Container wrapper -->
-            <div class="container-fluid">
-                <!-- Toggle button -->
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-mdb-toggle="collapse"
-                    data-mdb-target="#navbarCenteredExample"
-                    aria-controls="navbarCenteredExample"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-
-                <!-- Collapsible wrapper -->
-                <div
-                    class="collapse navbar-collapse justify-content-center"
-                    id="navbarCenteredExample">
-                    <!-- Left links -->
-                    <ul class="navbar-nav mb-2 mb-lg-0">
-                        <li class="nav-item px-4" >
-                            <a class="nav-link active" aria-current="page" href="#">portfolio</a>
-                        </li>
-                        <li class="nav-item px-4">
-                            <a class="nav-link active" aria-current="page" href="#">about</a>
-                        </li>
-                        <li class="nav-item px-4">
-                            <a class="nav-link active" aria-current="page" href="#">contact</a>
-                        </li>
-                   
-                    </ul>
-                    <!-- Left links -->
-                </div>
-                <!-- Collapsible wrapper -->
-            </div>
-            <!-- Container wrapper -->
-        </nav>
-        <!--esto es el backgound imagen-->
-        <div class="container-fluid">
-            <!-- Jumbotron -->
-            <div
-            class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
-            style="background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/003.webp');"
-            >
-            <h1 class="mb-3 h2">Jumbotron</h1>
-
-            <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus praesentium
-            labore accusamus sequi, voluptate debitis tenetur in deleniti possimus modi voluptatum
-            neque maiores dolorem unde? Aut dolorum quod excepturi fugit.
-            </p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <title>Sonu and gabriel Portfolio</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-fluid mb-5">
+          <a class="navbar-brand d-md-none fw-bold" href="#">Welcome</a>
+          <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse " data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav gap-5 fw-bold mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-<!-- Jumbotron -->
+      </nav>
+      <header>
+        <div class="container-sm d-flex flex-column justify-content-center mt-5 px-5">
+          <h1 class="text-success text-center">Hello there, we are sonu and gabriel. <span class="d-block text-primary text-center">We are software developers</span></h1>
+          <p class="d-block text-center mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam modi atque consequatur quasi libero officiis quibusdam vero! Ipsa nesciunt libero eos omnis nam quo in. Ipsa ullam numquam in quae.</p>
+          <div class="list-group d-flex flex-row justify-content-center">
+              <a href="#" class="list-group-item border-0"><img src="./media/ic-github.png"></a>
+              <a href="#" class="list-group-item border-0"><img src="./media/ic-twitter.png"></a>
+              <a href="#" class="list-group-item border-0"><img src="./media/ic-linkedin.png"></a>
+              <a href="#" class="list-group-item border-0"><img src="./media/ic-angelis.png"></a>
+              <a href="#" class="list-group-item border-0"><img src="./media/ic-medium.png"></a>
+          </div>
         </div>
-        <!-- JavaScript Bundle with Popper -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-
-        <!--Icon items-->
-        <div class="container-fluid">
-            <!-- Toggle button -->
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-mdb-toggle="collapse"
-                data-mdb-target="#navbarCenteredExample"
-                aria-controls="navbarCenteredExample"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
-
-            <!-- Collapsible wrapper -->
-            <nav class="navbar navbar-expand-lg bg-white">
-                <!-- Container wrapper -->
-                <div class="container-fluid">
-                    <!-- Toggle button -->
-                    <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-mdb-toggle="collapse"
-                        data-mdb-target="#navbarCenteredExample"
-                        aria-controls="navbarCenteredExample"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <i class="fas fa-bars"></i>
-                    </button>
-
-                    <div class="container">
-                        <ul class="row mb-2 mb-lg-0">
-                            <li class="col">
-                                <img src="./Img/Vector GitHub.png" alt="GitHub">
-                            </li>
-                            <li class="col">
-                                <img src="./Img/Vector in.lnk" alt="Linkedin">
-                            </li>
-                            <li class="col">
-                                <img src="./Img/angelist 1.png" alt="Angelist">
-                            </li>
-                            <li class="col">
-                                <img src="./Img/Vector-Twitter.png" alt="Twitter">
-                            </li>
-                            <li class="col">
-                                <img src="./Img/Vector-Medium.png" alt="Medium">
-                            </li>
-                        </ul>
-
-                    </div>
-
-                    <!-- Collapsible wrapper -->
-                </div>
-                <!-- Container wrapper -->
-            </nav>    
-    </body>
-</html>
+      </header>
