--- a/index.html
+++ b/index.html
@@ -43,3 +43,173 @@
           </div>
         </div>
       </header>
+    <section>
+        <div class="container-md py-5 mb-5">
+          <div class="row text-center mb-4">
+            <h2>My Recent Works</h2>
+          </div>
+
+          <div class="row-eq-height row">
+
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <div class="bg-secondary cards"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Multi-Post Stories Gain+Glory</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-info fw-light text-dark">Ruby on rails</span>
+                    <span class="badge bg-info fw-light text-dark">css</span>
+                    <span class="badge bg-info fw-light text-dark">JavaScript</span>
+                    <span class="badge bg-info fw-light text-dark">html</span>
+                  </div>
+                  <a href="#" class="btn btn-success">See Project</a>
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 d-block">
+              <div class="card mb-4">
+                <div class="bg-secondary cards"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Multi-Post Stories Gain+Glory</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-info fw-light text-dark">Ruby on rails</span>
+                    <span class="badge bg-info fw-light text-dark">css</span>
+                    <span class="badge bg-info fw-light text-dark">JavaScript</span>
+                    <span class="badge bg-info fw-light text-dark">html</span>
+                  </div>
+                  <a href="#" class="btn btn-success">See Project</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 d-block">
+              <div class="card mb-4">
+                <div class="bg-secondary cards"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Multi-Post Stories Gain+Glory</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-info fw-light text-dark">Ruby on rails</span>
+                    <span class="badge bg-info fw-light text-dark">css</span>
+                    <span class="badge bg-info fw-light text-dark">JavaScript</span>
+                    <span class="badge bg-info fw-light text-dark">html</span>
+                  </div>
+                  <a href="#" class="btn btn-success">See Project</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <div class="bg-secondary cards"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Multi-Post Stories Gain+Glory</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-info fw-light text-dark">Ruby on rails</span>
+                    <span class="badge bg-info fw-light text-dark">css</span>
+                    <span class="badge bg-info fw-light text-dark">JavaScript</span>
+                    <span class="badge bg-info fw-light text-dark">html</span>
+                  </div>
+                  <a href="#" class="btn btn-success">See Project</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <div class="bg-secondary cards"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Multi-Post Stories Gain+Glory</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-info fw-light text-dark">Ruby on rails</span>
+                    <span class="badge bg-info fw-light text-dark">css</span>
+                    <span class="badge bg-info fw-light text-dark">JavaScript</span>
+                    <span class="badge bg-info fw-light text-dark">html</span>
+                  </div>
+                  <a href="#" class="btn btn-success">See Project</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4">
+                <div class="bg-secondary class"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Multi-Post Stories Gain+Glory</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-info fw-light text-dark">Ruby on rails</span>
+                    <span class="badge bg-info fw-light text-dark">css</span>
+                    <span class="badge bg-info fw-light text-dark">JavaScript</span>
+                    <span class="badge bg-info fw-light text-dark">html</span>
+                  </div>
+                  <a href="#" class="btn btn-success">See Project</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </section>
+
+      <section>
+        <div class="container-md">
+          <div class="text-center mb-5">
+            <h2 class="mb-3">About me</h2>
+            <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
+                don’t hestiate to contact me.</p>
+                <a class="btn text-light bg-success">Get my resume</a>
+          </div>
+
+          <div class="row skills-card-height">
+
+            <div class="col-md-4">
+              <div class="card mb-4 bg-secondary">
+                <div class="text-center mt-3"><img src="./media/world.png"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Languages</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-success fw-light text-light">Ruby</span>
+                    <span class="badge bg-success fw-light text-light">css</span>
+                    <span class="badge bg-success fw-light text-light">JavaScript</span>
+                    <span class="badge bg-success fw-light text-light">html</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 bg-secondary">
+                <div class="text-center  mt-3"><img src="./media/cube.png"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Frameworks</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-success fw-light text-light">Bootstrap</span>
+                    <span class="badge bg-success fw-light text-light">Ruby on rails</span>
+                    <span class="badge bg-success fw-light text-light">RSpec</span>
+                    <span class="badge bg-success fw-light text-light">Capybara</span>
+                    <span class="badge bg-success fw-light text-light">Selenium</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card mb-4 bg-secondary">
+                <div class="text-center mt-3"><img src="./media/lightning.png"></div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Skills</h5>
+                  <div class="h6 d-flex flex-row gap-1 justify-content-center flex-wrap my-4">
+                    <span class="badge bg-success fw-light text-light">Codekit</span>
+                    <span class="badge bg-success fw-light text-light">GitHub</span>
+                    <span class="badge bg-success fw-light text-light">Codepen</span>
+                    <span class="badge bg-success fw-light text-light">Gitlab</span>
+                    <span class="badge bg-success fw-light text-light">Terminal</span>
+                  </div>
+                </div>
+              </div>
+              </div>
+
+          </div>
+
+        </div>
+      </section>
