--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </header>
-    <section>
+      <section>
         <div class="container-md py-5 mb-5">
           <div class="row text-center mb-4">
             <h2>My Recent Works</h2>
@@ -66,7 +66,8 @@
                 </div>
               </div>
             </div>
-              <div class="col-md-4 d-block">
+
+           <div class="col-md-4 d-block">
               <div class="card mb-4">
                 <div class="bg-secondary cards"></div>
                 <div class="card-body text-center">
@@ -213,3 +214,47 @@
 
         </div>
       </section>
+
+      <section>
+        <div class="container-md py-5">
+          <div class="row my-5 align-items-center">
+            <div class="col-md-5">
+              <p class="h4 fw-bold lh-lg text-center">
+                I'm always interested in hearing about new projects,
+                so if you'd like to chat please get in touch.
+              </p>
+            </div>
+
+            <div class="col-md-7">
+              <form action="" method="POST">
+                <div class="mb-3">
+                  <label for="full_name" class="form-label" hidden>Full name</label>
+                  <input type="text" class="form-control" name="full_name" id="full_name" aria-describedby="full name" placeholder="Full name" required>
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label" hidden>Email</label>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                </div>
+                <div class="mb-3">
+                  <label for="message" class="form-label" hidden>Message</label>
+                  <textarea class="form-control" name="message" id="message" rows="3" placeholder="Type your message here..." required></textarea>
+                </div>
+                <button type="submit" class="btn btn-success">Get in touch</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <div class="list-group d-flex flex-row justify-content-center border-top my-2 pt-2">
+            <a href="#" class="list-group-item border-0"><img src="./media/ic-github.png"></a>
+            <a href="#" class="list-group-item border-0"><img src="./media/ic-twitter.png"></a>
+            <a href="#" class="list-group-item border-0"><img src="./media/ic-linkedin.png"></a>
+            <a href="#" class="list-group-item border-0"><img src="./media/ic-angelis.png"></a>
+            <a href="#" class="list-group-item border-0"><img src="./media/ic-medium.png"></a>
+        </div>
+      </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
+</html>
